# losgatos

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  dt.dts  justfile
book/src/: SUMMARY.md
book/src/internal/: structure.md
core-lib/src/: lib.rs  sync.rs
devicetree/: Cargo.toml
devicetree/src/: error.rs  flattened.rs  iter.rs  lib.rs  node.rs  value.rs
elf/: Cargo.toml
elf/src/: endiannes.rs  header.rs  identification.rs  lib.rs  machine.rs  main.rs  segment.rs
kernel/: Cargo.toml  build.rs
kernel/src/: csr.rs  debug.rs  entry.S  entry.rs  entrypoint.S  linker.ld  main.rs  sbi.rs  sync.rs  traps.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv64/: csr.rs  entry.rs  entrypoint.S  interrupts.rs  linker.ld  mod.rs  sbi.rs
kernel/src/data_structures/: capacity_vec.rs  mod.rs
kernel/src/devicetree/: error.rs  value.rs
kernel/src/memory/: map.rs  mod.rs  physical.rs  types.rs
src/: debug.rs  devicetree.rs  linker.ld  logo_fmt.txt  main.rs  sbi.rs  sync.rs
src/arch/riscv64/: entry.rs  mod.rs  sbi.rs
src/boot/: entrypoint.S  mod.rs  start.rs
src/data_structures/: capacity_vec.rs
src/devicetree/: error.rs  flattened.rs  mod.rs  node.rs  parser.rs  tokenizer.rs  value.rs
src/memory/: allocator.rs  map.rs  mod.rs  static_area.rs
