[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = { version = "0.8.4", default-features = false, features = [] }
devicetree = { path = "../devicetree" }
core-lib = { path = "../core-lib" }

[features]
platform_virt = []
